# MyFy

./: .gitignore  README.org
myfy-api/: README.org  pyproject.toml
myfy-api/myfy_api/shared/models/: __init__.py
myfy-api/tests/: __init__.py  test_myfy_api.py
myfy-api/tests/unit/: test_service_db.py
myfy-frontend/: package-lock.json  package.json
