[tool.poetry]
name = "myfy-api"
version = "0.1.0"
description = ""
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
requests = "^2.25.1"
SQLAlchemy = "^1.4.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
